Доделал расширение пары, не нравится как туда встала svg стрелка не ровно, а так всё пашет.

--- a/Content/CSS/main.css
+++ b/Content/CSS/main.css
@@ -733,6 +733,20 @@
 	grid-template-rows: 1fr;
 }
 
+.para__task-extended{
+	display: none;
+	grid-column: 1/4;
+	grid-auto-flow: row dense;
+	align-self: center;
+	justify-content: space-around;
+	marks: #ffd92c;
+	/* padding-top: 80px; */
+}
+
+.para__task-extended > p > mark {
+	background-color: #ffd92c;
+}
+
 .extended{
 	max-height: 200px;
 	display: grid;
